--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="Amari%20Portfollio-Dateien/animate.css">
-	<link rel="stylesheet" href="Amari%20Portfollio-Dateien/font-awesome.css">
-	<link rel="stylesheet" href="Amari%20Portfollio-Dateien/normalize.css">
-	<link rel="stylesheet" href="Amari%20Portfollio-Dateien/main.css">
-	<link href="Amari%20Portfollio-Dateien/css.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="styles/animate.css">
+	<link rel="stylesheet" href="styles/normalize.css">
+	<link rel="stylesheet" href="styles/normalize.css">
+	<link rel="stylesheet" href="styles/main.css">
+	<link href="styles/css.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -22,8 +22,8 @@
 	<div class="container">
 		<header class="header skrollable skrollable-between" data-top="margin-bottom:150px; opacity:1;" data-top-bottom="margin-bottom:250px; opacity:0;" style="margin-bottom: 150px; opacity: 1;">
 			<h1 class="animated fadeIn">
-				I'm an 20 years young system engineer based in Switzerland, specializing in networking &amp; security,
-                as well as support engineering. I'm working on intresting projects. 
+				I'm an 20 years young system engineer based in Switzerland, specializing in cloud &amp; digital workplace,
+                as well as support engineering. Always working on intresting projects. 
 			</h1>
 			<div class="work-line animated fadeInUp">
 				<div class="vertcial-line skrollable skrollable-between" data-top=" opacity:1;" data-top-bottom=" opacity:0;  " data-anchor-target="header" style="opacity: 1;"></div>
